--- a/package.json
+++ b/package.json
@@ -16,9 +16,14 @@
     "@rollup/plugin-json": "^4.0.3",
     "rollup": "^1.20.0",
     "rollup-plugin-commonjs": "^10.0.0",
-    "rollup-plugin-node-resolve": "^5.1.0"
+    "rollup-plugin-node-resolve": "^5.1.0",
+    "eslint": "^7.2.0",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-prettier": "^3.1.3",
+    "prettier": "^2.0.5"
   },
   "scripts": {
+    "format": "prettier --write src/**/*.js",
     "build": "rollup -c",
     "dev": "rollup -c -w",
     "test": "node test/test.js",
