forgot to add types + remove minify for esm(+add source map)

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "web3w",
-  "version": "0.2.0",
+  "version": "0.2.1",
   "description": "Observable Store for Web3 Browser with ethers contracts integration",
   "main": "dist/cjs/index.js",
   "module": "dist/esm/index.js",
@@ -42,14 +42,13 @@
     "typescript": "^3.8.3"
   },
   "scripts": {
-    "prepare": "node .setup.js && node fix_ethers_modules.js && npm run build",
-    "dev": "tsc -w -p tsconfig.json --outDir dist/esm",
-    "build-esm": "rimraf dist/esm && tsc -p tsconfig.json && terser-folder tmp/esm -x .js -e -o dist/esm --config-file terser.json",
-    "build-cjs": "tsc -p tsconfig-cjs.json && terser-folder tmp/cjs -x .js -e -o dist/cjs --config-file terser.json",
-    "build-umd": "tsc -p tsconfig-umd.json && terser-folder tmp/umd -x .js -e -o dist/umd --config-file terser.json",
+    "prepare": "node .setup.js && node fix_ethers_modules.js && npm run lint && npm run build",
+    "dev": "tsc -w -p tsconfig.json",
+    "build-esm": "rimraf dist/esm && tsc -p tsconfig.json",
+    "build-cjs": "rimraf dist/cjs && tsc -p tsconfig-cjs.json && terser-folder dist/cjs -e -x .js -o dist/cjs --config-file terser.json",
+    "build-umd": "rimraf dist/umd && tsc -p tsconfig-umd.json && terser-folder dist/umd -e -x .js -o dist/umd --config-file terser.json",
     "build": "run-s build-esm build-cjs build-umd",
-    "lint": "eslint src/**/*.{js,ts,tsx} --quiet --fix",
-    "prepublishOnly": "npm run build"
+    "lint": "eslint src/**/*.{js,ts,tsx} --quiet --fix"
   },
   "dependencies": {
     "named-logs": "^0.0.6"
