--- a/tsconfig-umd.json
+++ b/tsconfig-umd.json
@@ -2,7 +2,7 @@
   "extends": "./tsconfig.json",
   "compilerOptions": {
     "module": "UMD",
-    "outDir": "tmp/umd",
+    "outDir": "dist/umd",
     "sourceMap": false // TODO terser
   }
 }
