--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "web3w",
-  "version": "0.2.2",
+  "version": "0.2.3",
   "description": "Observable Store for Web3 Browser with ethers contracts integration",
   "main": "dist/cjs/index.js",
   "module": "dist/esm/index.js",
@@ -21,14 +21,14 @@
     "ethers.js"
   ],
   "peerDependencies": {
-    "@ethersproject/bignumber": "^5.0.0-beta.138",
-    "@ethersproject/contracts": "^5.0.0-beta.151",
-    "@ethersproject/providers": "^5.0.0-beta.164"
+    "@ethersproject/bignumber": "^5.0.0",
+    "@ethersproject/contracts": "^5.0.0",
+    "@ethersproject/providers": "^5.0.0"
   },
   "devDependencies": {
-    "@ethersproject/bignumber": "^5.0.0-beta.138",
-    "@ethersproject/contracts": "^5.0.0-beta.151",
-    "@ethersproject/providers": "^5.0.0-beta.164",
+    "@ethersproject/bignumber": "^5.0.6",
+    "@ethersproject/contracts": "^5.0.3",
+    "@ethersproject/providers": "^5.0.6",
     "@typescript-eslint/eslint-plugin": "^3.9.1",
     "@typescript-eslint/parser": "^3.9.1",
     "eslint": "^7.7.0",
