--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "web3w",
-  "version": "0.2.26",
+  "version": "0.2.27",
   "description": "Observable Store for Web3 Browser with ethers contracts integration",
   "main": "dist/amd/index.js",
   "module": "dist/esm/index.js",
@@ -29,6 +29,7 @@
     "@ethersproject/bignumber": "^5.0.6",
     "@ethersproject/contracts": "^5.0.3",
     "@ethersproject/providers": "^5.0.6",
+    "@types/node": "^14.11.2",
     "@typescript-eslint/eslint-plugin": "^3.9.1",
     "@typescript-eslint/parser": "^3.9.1",
     "eslint": "^7.7.0",
@@ -45,10 +46,9 @@
     "prepare": "node .setup.js && node fix_ethers_modules.js && npm run lint && npm run build",
     "dev": "tsc -w -p tsconfig.json",
     "build:esm": "rimraf dist/esm && tsc -p tsconfig.json",
-    "build:cjs": "rimraf dist/cjs && tsc -p tsconfig-cjs.json",
     "build:amd": "rimraf dist/amd && tsc -p tsconfig-amd.json && terser-folder dist/amd -e -x .js -o dist/amd --config-file terser.json",
     "build:umd": "rimraf dist/umd && tsc -p tsconfig-umd.json && terser-folder dist/umd -e -x .js -o dist/umd --config-file terser.json",
-    "build": "run-s build:esm build:amd build:umd build:cjs",
+    "build": "run-s build:esm build:amd build:umd",
     "lint": "eslint src/**/*.{js,ts,tsx} --quiet --fix"
   },
   "dependencies": {
