--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "web3w",
-  "version": "0.2.36",
+  "version": "0.2.37",
   "description": "Observable Store for Web3 Browser with ethers contracts integration",
   "main": "dist/amd/index.js",
   "module": "dist/esm/index.js",
@@ -21,16 +21,16 @@
     "ethers.js"
   ],
   "peerDependencies": {
+    "@ethersproject/abi": "^5.0.0",
     "@ethersproject/bignumber": "^5.0.0",
     "@ethersproject/contracts": "^5.0.0",
-    "@ethersproject/providers": "^5.0.0",
-    "@ethersproject/abi": "^5.0.0"
+    "@ethersproject/providers": "^5.0.0"
   },
   "devDependencies": {
-    "@ethersproject/abi": "^5.0.7",
-    "@ethersproject/bignumber": "^5.0.6",
-    "@ethersproject/contracts": "^5.0.3",
-    "@ethersproject/providers": "^5.0.6",
+    "@ethersproject/abi": "^5.0.8",
+    "@ethersproject/bignumber": "^5.0.10",
+    "@ethersproject/contracts": "^5.0.7",
+    "@ethersproject/providers": "^5.0.15",
     "@types/node": "^14.11.2",
     "@typescript-eslint/eslint-plugin": "^3.9.1",
     "@typescript-eslint/parser": "^3.9.1",
@@ -45,7 +45,7 @@
     "typescript": "^3.8.3"
   },
   "scripts": {
-    "prepare": "node .setup.js && node fix_ethers_modules.js && npm run lint && npm run build",
+    "prepare": "node .setup.js && npm run lint && npm run build",
     "dev": "tsc -w -p tsconfig.json",
     "build:esm": "rimraf dist/esm && tsc -p tsconfig.json",
     "build:amd": "rimraf dist/amd && tsc -p tsconfig-amd.json && terser-folder dist/amd -e -x .js -o dist/amd --config-file terser.json",
