--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "web3w",
-  "version": "0.2.43",
+  "version": "0.2.44",
   "description": "Observable Store for Web3 Browser with ethers contracts integration",
   "main": "dist/amd/index.js",
   "module": "dist/esm/index.js",
   "types": "dist/esm/index.d.ts",
   "files": [
-    "dist/"
+    "dist/",
+    "src/"
   ],
   "author": "Ronan Sandford",
   "license": "MIT",
