--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "web3w",
-  "version": "0.2.44",
+  "version": "0.3.0",
   "description": "Observable Store for Web3 Browser with ethers contracts integration",
-  "main": "dist/amd/index.js",
+  "main": "dist/cjs/index.js",
   "module": "dist/esm/index.js",
   "types": "dist/esm/index.d.ts",
   "files": [
@@ -32,26 +32,25 @@
     "@ethersproject/bignumber": "^5.0.10",
     "@ethersproject/contracts": "^5.0.7",
     "@ethersproject/providers": "^5.0.15",
-    "@types/node": "^14.11.2",
-    "@typescript-eslint/eslint-plugin": "^3.9.1",
-    "@typescript-eslint/parser": "^3.9.1",
+    "@types/node": "^15.3.0",
+    "@typescript-eslint/eslint-plugin": "^4.24.0",
+    "@typescript-eslint/parser": "^4.24.0",
     "eslint": "^7.7.0",
-    "eslint-config-prettier": "^6.11.0",
+    "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^3.1.4",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.0.5",
     "rimraf": "^3.0.2",
     "terser": "^5.2.1",
     "terser-folder": "^2.0.0",
-    "typescript": "^3.8.3"
+    "typescript": "^4.2.4"
   },
   "scripts": {
     "prepare": "node .setup.js && npm run lint && npm run build",
     "dev": "tsc -w -p tsconfig.json",
     "build:esm": "rimraf dist/esm && tsc -p tsconfig.json",
-    "build:amd": "rimraf dist/amd && tsc -p tsconfig-amd.json && terser-folder dist/amd -e -x .js -o dist/amd --config-file terser.json",
-    "build:umd": "rimraf dist/umd && tsc -p tsconfig-umd.json && terser-folder dist/umd -e -x .js -o dist/umd --config-file terser.json",
-    "build": "run-s build:esm build:amd build:umd",
+    "build:cjs": "rimraf dist/cjs && tsc -p tsconfig-cjs.json",
+    "build": "run-s build:esm build:cjs",
     "lint": "eslint src/**/*.{js,ts,tsx} --quiet --fix"
   },
   "dependencies": {
