--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "web3w",
-  "version": "0.3.1",
+  "version": "0.3.2-beta.0",
   "description": "Observable Store for Web3 Browser with ethers contracts integration",
   "main": "dist/cjs/index.js",
   "module": "dist/esm/index.js",
@@ -28,6 +28,7 @@
     "@ethersproject/providers": "^5.0.0"
   },
   "devDependencies": {
+    "@changesets/cli": "^2.17.0",
     "@ethersproject/abi": "^5.0.8",
     "@ethersproject/bignumber": "^5.0.10",
     "@ethersproject/contracts": "^5.0.7",
