--- a/package.json
+++ b/package.json
@@ -1,11 +1,10 @@
 {
   "name": "web3w",
-  "version": "0.3.2-beta.5",
+  "version": "0.3.2-beta.6",
   "description": "Observable Store for Web3 Browser with ethers contracts integration",
   "main": "dist/cjs/index.js",
   "module": "dist/esm/index.js",
   "types": "dist/esm/index.d.ts",
-  "type": "module",
   "files": [
     "dist/",
     "src/"
@@ -40,10 +39,10 @@
   },
   "devDependencies": {
     "@changesets/cli": "^2.17.0",
-    "@ethersproject/abi": "^5.0.8",
-    "@ethersproject/bignumber": "^5.0.10",
-    "@ethersproject/contracts": "^5.0.7",
-    "@ethersproject/providers": "^5.0.15",
+    "@ethersproject/abi": "^5.4.1",
+    "@ethersproject/bignumber": "^5.4.2",
+    "@ethersproject/contracts": "^5.4.1",
+    "@ethersproject/providers": "^5.4.5",
     "@types/node": "^15.3.0",
     "@typescript-eslint/eslint-plugin": "^4.24.0",
     "@typescript-eslint/parser": "^4.24.0",
@@ -51,11 +50,11 @@
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^3.1.4",
     "npm-run-all": "^4.1.5",
-    "prettier": "^2.0.5",
+    "prettier": "^2.4.1",
     "rimraf": "^3.0.2",
-    "terser": "^5.2.1",
+    "terser": "^5.9.0",
     "terser-folder": "^2.0.0",
-    "typescript": "^4.2.4"
+    "typescript": "4.2.4"
   },
   "scripts": {
     "prepare": "node .setup.cjs && npm run lint && npm run build",
