--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+ssh://git@github.com:wighawag/web3w.git"
+    "url": "https://github.com/wighawag/web3w.git"
   },
   "keywords": [
     "web3",
